--- a/app/src/main/res/layout/fragment_seven_zip.xml
+++ b/app/src/main/res/layout/fragment_seven_zip.xml
@@ -70,18 +70,17 @@
             android:id="@+id/fab_add_file"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/fab_back"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             style="@style/Widget.Material3.Button.TonalButton"
-            app:icon="@drawable/ic_add"
             android:text="@string/add"/>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/fab_back"
+            android:id="@+id/cancel_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
-            android:layout_alignParentEnd="true"
-            app:icon="@drawable/ic_arrow_back"/>
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_toStartOf="@id/fab_add_file"
+            android:text="@string/cancel"/>
     </RelativeLayout>
 </RelativeLayout>
