--- a/app/src/main/res/drawable/item_background_3.xml
+++ b/app/src/main/res/drawable/item_background_3.xml
@@ -17,7 +17,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="?attr/colorSurfaceContainerLowest" />
+    <solid android:color="?attr/colorSurface" />
     <corners android:radius="8dp" />
     <padding
         android:left="0dp"
