--- a/app/src/main/res/layout/fragment_seven_zip.xml
+++ b/app/src/main/res/layout/fragment_seven_zip.xml
@@ -58,6 +58,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
+        android:clipToPadding="false"
         tools:listitem="@layout/item_file" />
 
     <RelativeLayout
