--- a/app/src/main/res/layout/dialog_path_picker.xml
+++ b/app/src/main/res/layout/dialog_path_picker.xml
@@ -133,6 +133,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="5dp"
+                android:clipToPadding="false"
                 android:layout_marginEnd="5dp" />
 
         </FrameLayout>
